[gd_scene load_steps=12 format=3 uid="uid://dfyxn8l8uy0hm"]

[ext_resource type="Script" uid="uid://jvepttfn2388" path="res://scripts/main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://dj04gpqp0lx15" path="res://scenes/incubation_station.tscn" id="2_0xm2m"]
[ext_resource type="Texture2D" uid="uid://cj6bgb1vq6cuq" path="res://assets/egg_bg_game_jam_July_2025.png" id="2_efxa6"]
[ext_resource type="Resource" uid="uid://igwpka7ehvvf" path="res://scripts/egg_creatures/creature_chicken.tres" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bb2c5mlyg7sy4" path="res://scenes/devices/heater.tscn" id="3_h2yge"]
[ext_resource type="Resource" uid="uid://5hgtftfyu4uv" path="res://scripts/egg_creatures/creature_duck.tres" id="4_lquwl"]
[ext_resource type="PackedScene" uid="uid://m7nn74deuc3m" path="res://scenes/devices/hanging_lamp.tscn" id="6_7mycd"]
[ext_resource type="PackedScene" uid="uid://brnwpac523qw7" path="res://scenes/devices/cooler.tscn" id="7_272bh"]
[ext_resource type="PackedScene" uid="uid://dv57jw1jlbgw" path="res://scenes/shop/device_shop.tscn" id="9_kek77"]
[ext_resource type="PackedScene" uid="uid://d2xwmhitg3r0s" path="res://scenes/shop/egg_reward.tscn" id="10_4c57u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4c57u"]
size = Vector2(64, 110)

[node name="Main" type="Node2D"]
script = ExtResource("1_ig7tw")

[node name="BackgroundSprite2D" type="Sprite2D" parent="."]
z_index = -20
position = Vector2(315, 180)
texture = ExtResource("2_efxa6")

[node name="SpawnArea2D" type="Area2D" parent="."]
position = Vector2(607, 96)
metadata/_edit_group_ = true

[node name="Marker2D" type="Marker2D" parent="SpawnArea2D"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpawnArea2D"]
shape = SubResource("RectangleShape2D_4c57u")

[node name="Map" type="Node2D" parent="."]

[node name="IncubationStation1" parent="Map" instance=ExtResource("2_0xm2m")]
position = Vector2(160, 158)
starting_egg_creature = ExtResource("3_1bvp3")

[node name="IncubationStation2" parent="Map" instance=ExtResource("2_0xm2m")]
position = Vector2(288, 160)
starting_egg_creature = ExtResource("4_lquwl")

[node name="IncubationStation3" parent="Map" instance=ExtResource("2_0xm2m")]
position = Vector2(416, 160)

[node name="Heater" parent="Map" instance=ExtResource("3_h2yge")]
position = Vector2(143, 235)

[node name="HangingLamp" parent="Map" instance=ExtResource("6_7mycd")]
position = Vector2(160, 64)

[node name="HangingLamp2" parent="Map" instance=ExtResource("6_7mycd")]
position = Vector2(416, 56)
enabled = false

[node name="Cooler" parent="Map" instance=ExtResource("7_272bh")]
position = Vector2(416, 248)
enabled = false

[node name="GameTickTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="TickLabel" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
text = "Ticks: 0"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.625597, 0.625597, 0.625597, 1)

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="OpenShopButton" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -101.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 39.0
grow_horizontal = 0
text = "Open Shop"

[node name="DeviceShop" parent="CanvasLayer" instance=ExtResource("9_kek77")]
unique_name_in_owner = true
visible = false
offset_left = -90.0
offset_right = 90.0

[node name="EggReward" parent="CanvasLayer" instance=ExtResource("10_4c57u")]
unique_name_in_owner = true
visible = false
offset_left = -303.5
offset_top = -122.5
offset_right = 303.5
offset_bottom = 122.5

[node name="ClearSpawnArea" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -141.0
offset_top = 158.0
offset_bottom = 198.0
grow_horizontal = 0

[node name="Label" type="Label" parent="CanvasLayer/ClearSpawnArea"]
layout_mode = 2
text = "Clear Spawn Area!"

[connection signal="timeout" from="GameTickTimer" to="." method="_on_game_tick_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/OpenShopButton" to="." method="_on_open_shop_button_pressed"]
[connection signal="device_bought" from="CanvasLayer/DeviceShop" to="." method="_on_device_shop_device_bought"]
[connection signal="creature_choosen" from="CanvasLayer/EggReward" to="." method="_on_egg_reward_creature_choosen"]
